--- a/src/app/chat-list/chat-list.component.html
+++ b/src/app/chat-list/chat-list.component.html
@@ -13,6 +13,8 @@
     </div>
   </div>
   <div class="card-footer">
-    <a class="btn btn-sm btn-link btn-primary" *ngIf="talkTo">Start Chat with {{ talkTo }}</a>
+    <a class="btn btn-sm btn-link btn-primary" *ngIf="talkTo" [routerLink]="[talkTo]">
+      Start Chat with {{ talkTo }}
+    </a>
   </div>
 </div>
