--- a/src/app/forums/threads/threads.component.html
+++ b/src/app/forums/threads/threads.component.html
@@ -1,18 +1,22 @@
 <div class="content-container">
   <div class="content-area">
     <table class="table" *ngIf="threads">
+      <thead>
       <tr>
         <th>Thread</th>
         <th>User</th>
         <th>Last Post</th>
         <th>Posts</th>
       </tr>
+      </thead>
+      <tbody>
       <tr *ngFor="let thread of threads" [routerLink]="[thread.alias]">
         <td>{{thread.title}}</td>
         <td>{{thread.posts[0].username}}</td>
         <td>{{thread.posts[0].timestamp | date:'medium'}}</td>
         <td>{{thread.posts.length}}</td>
       </tr>
+      </tbody>
     </table>
   </div>
 </div>
